[gd_scene load_steps=58 format=3 uid="uid://bpuph37hvyji5"]

[ext_resource type="Script" path="res://scenes/objects/characters/enemy_with_spikes.gd" id="1_g2kcy"]
[ext_resource type="Texture2D" uid="uid://cqwetug1p7sg5" path="res://assets/characters/turtle/Idle 1 (44x26).png" id="2_b714j"]
[ext_resource type="Texture2D" uid="uid://b3s0v8npacrl8" path="res://assets/characters/turtle/Hit (44x26).png" id="3_w7mmw"]
[ext_resource type="Texture2D" uid="uid://u1w118nnugx5" path="res://assets/characters/turtle/Spikes out (44x26).png" id="4_x7c57"]
[ext_resource type="Texture2D" uid="uid://dxaoaf3rdl8gm" path="res://assets/characters/turtle/Spikes in (44x26).png" id="5_klttj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2m3ye"]
atlas = ExtResource("2_b714j")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6h12"]
atlas = ExtResource("2_b714j")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8gy7"]
atlas = ExtResource("2_b714j")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yce7c"]
atlas = ExtResource("2_b714j")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr4mk"]
atlas = ExtResource("2_b714j")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi4xg"]
atlas = ExtResource("2_b714j")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_mshqq"]
atlas = ExtResource("2_b714j")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r5oh"]
atlas = ExtResource("2_b714j")
region = Rect2(308, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bqhw"]
atlas = ExtResource("2_b714j")
region = Rect2(352, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc5h3"]
atlas = ExtResource("2_b714j")
region = Rect2(396, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkdbx"]
atlas = ExtResource("2_b714j")
region = Rect2(440, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_h88ki"]
atlas = ExtResource("2_b714j")
region = Rect2(484, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkly4"]
atlas = ExtResource("2_b714j")
region = Rect2(528, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_my3bk"]
atlas = ExtResource("2_b714j")
region = Rect2(572, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fynj"]
atlas = ExtResource("3_w7mmw")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ch0e"]
atlas = ExtResource("3_w7mmw")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wo11"]
atlas = ExtResource("3_w7mmw")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ncp"]
atlas = ExtResource("3_w7mmw")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg63u"]
atlas = ExtResource("3_w7mmw")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xvlb"]
atlas = ExtResource("2_b714j")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd0mk"]
atlas = ExtResource("2_b714j")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchth"]
atlas = ExtResource("2_b714j")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_picbx"]
atlas = ExtResource("2_b714j")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cddgk"]
atlas = ExtResource("2_b714j")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_11wq6"]
atlas = ExtResource("2_b714j")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_llfnu"]
atlas = ExtResource("2_b714j")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_de3e8"]
atlas = ExtResource("2_b714j")
region = Rect2(308, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_77ghw"]
atlas = ExtResource("2_b714j")
region = Rect2(352, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_upqlh"]
atlas = ExtResource("2_b714j")
region = Rect2(396, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sbqd"]
atlas = ExtResource("2_b714j")
region = Rect2(440, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cahhr"]
atlas = ExtResource("2_b714j")
region = Rect2(484, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrwq6"]
atlas = ExtResource("2_b714j")
region = Rect2(528, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5om3"]
atlas = ExtResource("2_b714j")
region = Rect2(572, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_30iay"]
atlas = ExtResource("4_x7c57")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_b66k7"]
atlas = ExtResource("4_x7c57")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kkkw"]
atlas = ExtResource("4_x7c57")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycruq"]
atlas = ExtResource("4_x7c57")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocot5"]
atlas = ExtResource("4_x7c57")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_5it58"]
atlas = ExtResource("4_x7c57")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk2wc"]
atlas = ExtResource("4_x7c57")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2mrg"]
atlas = ExtResource("4_x7c57")
region = Rect2(308, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppe0r"]
atlas = ExtResource("5_klttj")
region = Rect2(0, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug5e3"]
atlas = ExtResource("5_klttj")
region = Rect2(44, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_52nk1"]
atlas = ExtResource("5_klttj")
region = Rect2(88, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxhbu"]
atlas = ExtResource("5_klttj")
region = Rect2(132, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdcum"]
atlas = ExtResource("5_klttj")
region = Rect2(176, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_03p2f"]
atlas = ExtResource("5_klttj")
region = Rect2(220, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_w847l"]
atlas = ExtResource("5_klttj")
region = Rect2(264, 0, 44, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqiq0"]
atlas = ExtResource("5_klttj")
region = Rect2(308, 0, 44, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_jejit"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m3ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6h12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8gy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yce7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr4mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi4xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mshqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r5oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bqhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc5h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkdbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h88ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkly4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my3bk")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fynj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ch0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wo11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ncp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg63u")
}],
"loop": false,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xvlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd0mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_picbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cddgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11wq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de3e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77ghw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upqlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sbqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cahhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrwq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5om3")
}],
"loop": true,
"name": &"spikes",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_30iay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b66k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kkkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycruq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocot5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5it58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk2wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2mrg")
}],
"loop": false,
"name": &"spikes_in",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppe0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug5e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52nk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxhbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdcum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03p2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w847l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqiq0")
}],
"loop": false,
"name": &"spikes_out",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdfbf"]
size = Vector2(47, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlaof"]
size = Vector2(51, 39)

[node name="turtle" type="RigidBody2D"]
script = ExtResource("1_g2kcy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(12.5, 12.5)
scale = Vector2(1.78125, 1.78125)
sprite_frames = SubResource("SpriteFrames_jejit")
animation = &"spikes"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12.5, 23.5)
shape = SubResource("RectangleShape2D_qdfbf")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12.5, 20.5)
shape = SubResource("RectangleShape2D_jlaof")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
